<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quiz_question_one"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#ff5f52"
            android:gravity="fill"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:text="@string/question_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
             />

        <RadioGroup
            android:id="@+id/quiz_qOne_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/quiz_question_one">

            <RadioButton
                android:id="@+id/quiz_qOne_ansOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qOne_ansOne"
                />

            <RadioButton
                android:id="@+id/quiz_qOne_ansTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qOne_ansTwo"
                />

            <RadioButton
                android:id="@+id/quiz_qOne_ansThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qOne_ansThree"
                />

            <RadioButton
                android:id="@+id/quiz_qOne_ansFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qOne_ansFour"
                />

        </RadioGroup>


        <TextView
            android:id="@+id/quiz_question_two"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#ff5f52"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:gravity="fill"
            android:text="@string/question_two"
            app:layout_constraintTop_toBottomOf="@id/quiz_qOne_group"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioGroup
            android:id="@+id/quiz_qTwo_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/quiz_question_two">

            <RadioButton
                android:id="@+id/quiz_qTwo_ansOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qTwo_ansOne"
                />

            <RadioButton
                android:id="@+id/quiz_qTwo_ansTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qTwo_ansTwo"
                />

            <RadioButton
                android:id="@+id/quiz_qTwo_ansThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qTwo_ansThree"
                />

            <RadioButton
                android:id="@+id/quiz_qTwo_ansFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qTwo_ansFour"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_question_three"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#ff5f52"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:gravity="fill"
            android:text="@string/question_three"
            app:layout_constraintTop_toBottomOf="@id/quiz_qTwo_group"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioGroup
            android:id="@+id/quiz_qThree_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/quiz_question_three">

            <RadioButton
                android:id="@+id/quiz_qThree_ansOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qThree_ansOne"
                />

            <RadioButton
                android:id="@+id/quiz_qThree_ansTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qThree_ansTwo"
                />

            <RadioButton
                android:id="@+id/quiz_qThree_ansThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qThree_ansThree"
                />

            <RadioButton
                android:id="@+id/quiz_qThree_ansFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qThree_ansFour"
                />
        </RadioGroup>


        <TextView
            android:id="@+id/quiz_question_four"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#ff5f52"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:gravity="fill"
            android:text="@string/question_four"
            app:layout_constraintTop_toBottomOf="@id/quiz_qThree_group"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioGroup
            android:id="@+id/quiz_qFour_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/quiz_question_four">

            <RadioButton
                android:id="@+id/quiz_qFour_ansOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFour_ansOne"
                />

            <RadioButton
                android:id="@+id/quiz_qFour_ansTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFour_ansTwo"
                />

            <RadioButton
                android:id="@+id/quiz_qFour_ansThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFour_ansThree"
                />

            <RadioButton
                android:id="@+id/quiz_qFour_ansFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFour_ansFour"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_question_five"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#ff5f52"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:gravity="fill"
            android:text="@string/question_five"
            app:layout_constraintTop_toBottomOf="@id/quiz_qFour_group"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioGroup
            android:id="@+id/quiz_qFive_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/quiz_question_five">

            <RadioButton
                android:id="@+id/quiz_qFive_ansOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFive_ansOne"
                />

            <RadioButton
                android:id="@+id/quiz_qFive_ansTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFive_ansTwo"
                />

            <RadioButton
                android:id="@+id/quiz_qFive_ansThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFive_ansThree"
                />

            <RadioButton
                android:id="@+id/quiz_qFive_ansFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/qFive_ansFour"
                />
        </RadioGroup>

        <Button
            android:id="@+id/button_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/check_results"
            android:onClick="score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_qFive_group"
             />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
